# sidekick

./: publish.ps1
sidekick/: .agent.md  .env.example  CHANGELOG.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LIVE_TESTING_CHECKLIST.md  README.md  SIDEKICK_ASSESSMENT.md  install.ps1  pyproject.toml
sidekick-notify/: .vscodeignore  package.json
sidekick-notify/src/: extension.ts  feedModel.test.ts  feedModel.ts
sidekick/configs/: _template.yaml  default.yaml
sidekick/docs/: accuracy-and-focus-spec.md
sidekick/src/sidekick/: cli.py  config.py  engine.py  llm.py  server.py  session_state.py
sidekick/src/sidekick/actions/: enghub.py  prototype.py  research.py
sidekick/src/sidekick/agents/: sidekick.agent.md
sidekick/src/sidekick/analyst/: adjudicator.py  classifier.py  context.py  prompts.py  speakers.py
sidekick/src/sidekick/extensions/: sidekick-notify.vsix
sidekick/src/sidekick/output/: deliverables.py  notifier.py
sidekick/src/sidekick/queue/: priority_queue.py
sidekick/src/sidekick/transcript/: audio_capture.py  speech_recogniser.py  vocabulary.py
sidekick/tests/: test_adjudicator.py  test_analyst_prompt.py  test_audio_capture.py  test_cli_install.py  test_config_merge.py  test_deliverables.py  test_enghub_auth.py  test_engine.py  test_listen_loop.py  test_notifier.py  test_priority_queue.py  test_research_routing.py  test_speakers.py  test_speech_recogniser.py  test_stop_response.py  test_vocabulary.py
