[project]
name = "sidekick-copilot"
version = "0.1.0"
description = "Real-time meeting co-pilot MCP server for GitHub Copilot"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "azure-identity>=1.17.0",
]

[project.scripts]
sidekick = "sidekick.cli:main"

[project.optional-dependencies]
live = [
    "faster-whisper>=1.0.0",
    "PyAudioWPatch>=0.2.12; platform_machine != 'ARM64' and platform_machine != 'aarch64'",
    "Pillow>=10.0.0",
]
azure = [
    "azure-cognitiveservices-speech>=1.38.0",
    "PyAudioWPatch>=0.2.12; platform_machine != 'ARM64' and platform_machine != 'aarch64'",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = [
    "sidekick-copilot[live,azure,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sidekick"]

[tool.hatch.build.targets.wheel.force-include]
"configs/default.yaml" = "sidekick/configs/default.yaml"
"configs/_template.yaml" = "sidekick/configs/_template.yaml"
